 - Moved smarty plugin {menu} to MenuManager module
 - Moved smarty plugin {news} to News module
 - Added default backend wysiwyg as a preference
 - Backend wysiwyg option on add user
 - Smartified editprefs
 - Updated /lib/jquery and cms_jquery plugin with latest jQuery and jQuery UI Frameworks
 - Added jQuery UI Smoothness Stylesheet to NCLeanGrey
 
Core - Bug Reports:
 - #6161 Core Printing Module - Compression issue

Core - Feature Requests:


Core - General:


Core - Installer:


CMSMailer:


MenuManager:
- Added the {cms_breadcrumbs} action (which is templatable).  deprecates {breadcrumbs}
	

MicroTiny:


News:


Search: 
 - Moved "Stop Words" to language file
 - Added "Load Stop Words" from user language



Version 1.10.2 - Casa Pilote
-----------------------------
Core - Bug Reports:
  - #7111 ordered lists in backend
  - #7112 Missing content-type in printing module (CMSPrinting)
  - #7172 (cms_selflink encoding the urlparam stuff).
  - adds force_root_block to MicroTiny.
  - Fixes a problem with page alias when it was cleared in editcontent
  - Fixes a minor problem with copycontent
  - Fixes problem with filters not being loaded.

Version 1.10.1 - Le Lorrain
-----------------------------
  - Fixed a problem with improper HTTPS detection in the metadata plugin
  - Fixed a problem with modules not being loaded properly for admin stylesheets
  - Fixed a minor problem with microtinyconfig
  - Fixed a minor issue in event handlers.
  - Adds one more error check into MenuManager wrt to GetContent on inactive objects.
  - Fixes a problem with GetAllContent() which effects the parent dropdown stuff.
  - Fixes a problem with deleting inactive content.
  - Fixes the summary modifier.
  - Replaces the cms_tree_operations::load_from_list() method with a simpler, recursive function.
  - Minor optimizations to the cms_content_cache class to reduce database queries when there are deactivated pages.